assets/css/main.css
/* ... */
.bodyListItemProductWrapper {
    display: flex;
    justify-content: space-between;
}

.bodyListItemProductInfo {
}

.bodyListItemProductInfoWrap {
    flex: 1;
}

.bodyListItemProductInfoCard {
}

.bodyListItemProductInfoWrapper {
    display: flex;
    flex-flow: row wrap;
    gap: 32px;
}

.bodyListItemProductInfo .bodyListItemProductInfoWrap {
    flex: 0;
}

.bodyListItemProductInfo .infoCardHeading {
    flex: 1;
}

@media screen and (max-width: 768px) {
    .bodyListItemProductInfo {
        width: 100%;
    }

    .bodyListItemProductInfoWrapper {
        gap: 10px;
    }
}

.bodyListItemProductInfoCard {
    position: relative;
    display: inline-block;
}

.bodyListItemProductInfoCardTop {
    position: relative;
}

.infoCardTopWhlBtn {
    position: absolute;
    right: 10px;
    top: 10px;
}

.infoCardHeading {
}

.bodyListItemProductInfoCardImage {
    height: 100%;
    width: 100%;
    max-width: 14vw;
    max-height: 28vw;
    min-width: 14vw;
    min-height: 28vh;
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    border-radius: 5px;
}

.infoCardHeadingTitle {
    margin-bottom: 16px;
    font-style: normal;
    font-weight: 500;
    font-size: 18px;
    line-height: 135%;
    color: #1f1f1f;
    max-width: 18vw;
}

.infoCardHeadingBottomWrapper {
    display: none;
}

.infoCardQtyMb {
    display: none;
}

.infoCardDelMb {
    display: none;
}

@media screen and (max-width: 768px) {
    .infoCardHeading {
        width: 100%;
        max-width: 20vh;
    }

    .infoCardQtyMb {
        display: block;
    }

    .infoCardDelMb {
        display: block;
    }

    .infoCardHeadingBottomWrapper {
        display: flex;
        justify-content: space-between;
    }
}

.infoCardHeadingSelWrap {
}

.infoCardHeadingSelColor {
    margin-bottom: 16px;
}

@media screen and (max-width: 768px) {
    .infoCardHeadingSelWrap {
        display: flex;
        gap: 14px;
        justify-content: space-between;
    }

    .infoCardHeadingSelColor {
        margin-bottom: 0;
    }
}

.infoCardHeadingSelColor a {
    color: #e2b53c;
}

.bodyListItemProductQtyWrap {
    display: flex;
    gap: 6px;
}

.bodyListItemProductQtyBtnCnt {
    border: 1px solid #ececec;
    background: #fcfcfc;
    min-width: 80px;
    border-radius: 50px;
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
}

@media screen and (max-width: 768px) {
    .bodyListItemProductQtyBtnCnt {
        min-width: 60px;
    }

    .bodyListItemProductQtyBtnMns {
    }

    .bodyListItemProductQtyBtnPls svg,
    .bodyListItemProductQtyBtnMns svg {
        max-width: 30px;
        max-height: 30px;
    }
}

.cartPageBodySide {
    flex: 1;
    max-width: 26vw;
    min-width: 26vw;
}

.cartPageBodySideCheckoutBlock {
    border: 1px solid #e7e7e7;
    padding: 30px;
    margin-bottom: 20px;
    border-radius: 5px;
}

.checkoutBlockHeading {
    margin-bottom: 20px;
}

.checkoutBlockHeadingTitle {
    font-weight: 500;
    font-size: 24px;
    color: #1f1f1f;
}

@media screen and (max-width: 768px) {
    .checkoutBlockHeadingTitle {
        font-family: 'Sofia Sans', sans-serif;
        font-style: normal;
        font-weight: 500;
        font-size: 20px;
        line-height: 125%;
        /* identical to box height, or 25px */
        font-feature-settings: 'ss01' on;
        color: #1f1f1f;
    }
}

.checkoutBlockBodyRow {
    margin-bottom: 16px;
}

.checkoutBlockBodyRowWrap {
    display: flex;
    justify-content: space-between;
}

.checkout-button {
    font-family: 'Montserrat', sans-serif;
    background: #f0c224;
    font-weight: 600;
    font-size: 14px;
    padding: 16px;
    display: block;
    border-radius: 25px;
    text-align: center;
    text-decoration: none;
    color: #252525;
    margin-bottom: 16px;
}

.checkout-button:hover {
    background: #222222;
    color: #fff;
}

.delivery-note {
    font-family: 'Montserrat', sans-serif;
    font-weight: 500;
    font-size: 12px;
    line-height: 135%;
    letter-spacing: 0%;
    opacity: 0.5;
}

/**/
@media screen and (max-width: 768px) {
    .cartPageBodyWrapper {
        flex-flow: column;
        gap: 20px;
    }

    .checkoutBlockFooter {
        display: none;
    }

    .cartPageBodySide .checkoutBlockFooter a.checkout-button {
        /*display: none;*/
    }

    .cartPageBodySide .checkoutBlockFooter .delivery-note {
        display: none;
    }

    .cartPageBodySideCheckoutBlock,
    .cartPageBodySideCheckoutBlock {
        padding: 0 !important;
        border: none !important;
    }
}

.cartPageBodySide {
    max-width: 26vw;
    flex: 1;
}

@media screen and (max-width: 768px) {
    .cartPageBodySide {
        max-width: 100% !important;
        width: 100%;
        padding: 20px 0;
        border-top: 1px solid #e7e7e7;
        /* border-bottom: 1px solid #e7e7e7; */
    }

    .checkoutBlockBody hr {
        display: none;
    }
}

/**/

.promocodeWrapper {
    padding: 20px 0;
    border-top: 1px solid #e7e7e7;
    border-bottom: 1px solid #e7e7e7;
}

.promocodeBlock {
}

.promocodeBlock__header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    border: none;
    width: 100%;
    text-align: left;
    cursor: pointer;
    transition: background-color 0.3s ease;
    background: transparent;
}

.promocodeBlock__headerText {
    font-family: 'Montserrat', sans-serif;
    font-weight: 500;
    font-size: 16px;
    line-height: 135%;
    letter-spacing: 0%;
    color: #1f1f1f;
}

.promocodeBlock__arrow {
    display: inline-block;
    width: 10px;
    height: 10px;
    border: solid #333;
    border-width: 0 2px 2px 0;
    transform: rotate(45deg);
    transition: transform 0.3s ease;
}

.promocodeBlock__arrowOpen {
    transform: rotate(-135deg);
}

.promocodeBlock__content {
    margin-top: 16px;
    /*border: 1px solid #f5f5f5;*/
    border-top: none;
    border-radius: 0 0 20px 20px;
}
/* ... */

